--- a/cadastro.html
+++ b/cadastro.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="loginecadastro.css">
+    <link rel="stylesheet" href="Css\cadastro.css">
 </head>
 <body>
     <header>
         <h1>Cadastro</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a class="home-link" href="home.html">Home</a></li>
             </ul>
         </nav>
     </header>
