--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plataforma de Consulta Médica Online</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Css\styles.css">
 </head>
 <body>
     <header>
