--- a/cadastro.html
+++ b/cadastro.html
@@ -1,94 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <H3></H3>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
-    <link rel="stylesheet" href="Css\cadastro.css">
+    <link rel="stylesheet" href="Css\login.css">
+    <style>
+        /* Adicione estilos de posicionamento para o menu de navegação */
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            position: absolute;
+            top: 8px;
+            right: 8px;
+            text-align: center;
+        }
+
+        li {
+            float: right;
+            text-align: center;
+        }
+
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Cadastro</h1>
-        <nav>
-            <ul>
-                <li><a class="home-link" href="home.html">Home</a></li>
-            </ul>
-        </nav>
-    </header>
+    <h1>Bem-vindo a Central de Consultade UPAs</h1>
+    <p>Para continuar, realize seu cadastro</p>
 
-    <section>
-        <form id="cadastroForm" onsubmit="return fazerCadastro()">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" required>
-
-            <label for="cpf">CPF:</label>
-            <input type="text" id="cpf" name="cpf" required>
-
-            <label for="dataNascimento">Data de Nascimento:</label>
-            <input type="date" id="dataNascimento" name="dataNascimento" required>
-
-            <label for="celular">Celular:</label>
-            <input type="tel" id="celular" name="celular" required>
-
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="opcaoContato">Preferência de Contato:</label>
-            <select id="opcaoContato" name="opcaoContato" required>
-                <option value="email">E-mail</option>
-                <option value="whatsapp">WhatsApp</option>
-            </select>
-
-            <label for="senha">Senha:</label>
-            <input type="password" id="senha" name="senha" required>
-
-            <label for="confirmarSenha">Confirmar Senha:</label>
-            <input type="password" id="confirmarSenha" name="confirmarSenha" required>
-
-            <button type="submit">Cadastrar</button>
+    <div class="login-box">
+        <h2>Cadastre-se!</h2>
+        <form>
+            <div class="user-box">
+                <input type="text" name="" required="">
+                <label>CPF</label>
+            </div>
+            <div class="user-box">
+                <input type="text" name="" required="">
+                <label>RG</label>
+            </div>
+            <div class="user-box">
+                <input type="text" name="" required="">
+                <label>CEP</label>
+            </div>
+            <a href="home.html">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Cadastrar
+            </a>
         </form>
-    </section>
+        
+    </div>
 
-    <footer>
-        <p>&copy; 2023 Plataforma de Consulta Médica Online. Todos os direitos reservados.</p>
-    </footer>
-
-    <script>
-        function fazerCadastro() {
-            var nome = document.getElementById("nome").value;
-            var cpf = document.getElementById("cpf").value;
-            var dataNascimento = document.getElementById("dataNascimento").value;
-            var celular = document.getElementById("celular").value;
-            var email = document.getElementById("email").value;
-            var opcaoContato = document.getElementById("opcaoContato").value;
-            var senha = document.getElementById("senha").value;
-            var confirmarSenha = document.getElementById("confirmarSenha").value;
-
-            // Simulação de validação de senhas
-            if (senha !== confirmarSenha) {
-                alert("As senhas não coincidem. Tente novamente.");
-                return false; // Evitar o envio do formulário
-            }
-
-            // Simulação de cadastro
-            var usuarios = JSON.parse(localStorage.getItem('usuarios')) || [];
-            usuarios.push({
-                nome: nome,
-                cpf: cpf,
-                dataNascimento: dataNascimento,
-                celular: celular,
-                email: email,
-                opcaoContato: opcaoContato,
-                senha: senha
-            });
-            localStorage.setItem('usuarios', JSON.stringify(usuarios));
-
-            alert("Cadastro realizado com sucesso!");
-
-            // Redirecionar para a página de login após o cadastro
-            window.location.href = "login.html";
-            return false; // Evitar o envio do formulário
-        }
-    </script>
 </body>
 </html>
