--- a/home.html
+++ b/home.html
@@ -3,77 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plataforma de Consulta Médica Online</title>
+    <title>Plataforma de Consulta de Unidades de pronto atendimento</title>
     <link rel="stylesheet" href="Css\styles.css">
 </head>
 <body>
     <header>
-        <h1>Bem-vindo à Plataforma de Consulta Médica Online</h1>
+        <h1>Bem-vindo à Plataforma de Consulta de UPAs</h1>
         <nav>
-            <ul>
-                <li><a href="#">Encontre um Médico</a></li>
-                <li><a href="#">Como Funciona</a></li>
-                <li><a href="perfil.html">Meu Perfil</a></li>
-            </ul>
         </nav>
     </header>   
 
     <section class="pergunta">
-        <h2>O que deseja agendar?</h2>
+        <h2>Aqui está a lista das UPAs mais próximas de você!</h2>
     </section>
 
     <section class="atendimento-boxes">
         <div class="atendimento-box">
-            <a href="agendar-presencial.html">
-                <h2>Agendar Consulta Presencial</h2>
-                <p>Marque uma consulta com um médico pessoalmente.</p>
+            <a href="upa-vergueiro.html">
+                <h2>UPA Vergueiro</h2>
+                <p>Endereço: Rua Vergueiro, 613 - Liberdade, São Paulo - SP</p>
+                <p>CEP: 01504-000</p>
             </a>
         </div>
 
         <div class="atendimento-box">
-            <a href="agendar-consulta-online.html.html">
-                <h2>Agendar Consulta Online</h2>
-                <p>Realize uma consulta médica online no conforto da sua casa.</p>
+            <a href="upa-mooca.html">
+                <h2>UPA Mooca</h2>
+                <P>Rua Dr. Fomm, 261 - Belenzinho, São Paulo - SP, 03163-030</P>
+                <p>CEP: 03163-030</p>
             </a>
         </div>
 
         <div class="atendimento-box">
-            <a href="agendar-exames.html">
-                <h2>Agendar Exames</h2>
-                <p>Marque exames laboratoriais e de imagem.</p>
+            <a href="upa-santo-amaro.html">
+                <h2>UPA Santo Amaro</h2>
+                <p>Endereço: Rua Dr. Fomm, 261 - Belenzinho, São Paulo - SP</p>
+                <p>CEP: 03163-030</p>
             </a>
         </div>
-
-        <div class="atendimento-box">
-            <a href="agendar-dentista.html">
-                <h2>Agendar Consulta com Dentista</h2>
-                <p>Marque uma consulta odontológica.</p>
-            </a>
-        </div>
-
-        <div class="atendimento-box">
-            <a href="agendar-vacinas.html">
-                <h2>Agendar Vacinas</h2>
-                <p>Programe a aplicação de vacinas.</p>
-            </a>
-        </div>
+        
+        
     </section>
 
-    <section class="profile-carousel-container">
-        <div class="profile-carousel">
-            <div class="profile-card">
-                <!-- Conteúdo do primeiro card -->
-                <h3>Médico 1</h3>
-                <p>Especialidade: Cardiologia</p>
-            </div>
-            <div class="profile-card">
-                <!-- Conteúdo do segundo card -->
-                <h3>Médico 2</h3>
-                <p>Especialidade: Dermatologia</p>
-            </div>
-            <!-- Adicione mais cards conforme necessário -->
-        </div>
-    </section>
     <footer>
         <p>&copy; 2023 Plataforma de Consulta Médica Online. Todos os direitos reservados. </p>
     </footer>
